[package]
name = "reprisedb"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
prost-build = "0.11.9"

[dependencies]
rand = "0.8.5"
prost = "0.11.9"
prost-derive = "0.11.9"
parking_lot = "0.12.1"
tokio = { version = "1.28.2", features = ["full"]  }

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


